# gpscan_viewer

./: .gitignore  CMakeLists.txt  GENERATED.txt  PLAN.md  README.md
.github/workflows/: build.yml  release.yml  screenshot.yml
resources/: gpscan_viewer.desktop  sample.xml
src/: CanvasWidget.cpp  CanvasWidget.h  Palette.cpp  Palette.h  TreeLayout.cpp  TreeLayout.h  TreeModel.cpp  TreeModel.h  TreeReader.cpp  TreeReader.h  Utils.cpp  Utils.h  ViewerWindow.cpp  ViewerWindow.h  main.cpp
tests/: TestMain.cpp
